[package]
name = "orcajob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.19", features = ["derive", "cargo"]}
fs2 = "0.4.3"
rand = "0.8.5"
toml = "0.7.6"
whoami = "1.4.1"


[[bin]]
name = "orcajob"
path = "src/main.rs"

[[bin]]
name = "orcajobd"
path = "src/daemon.rs"
